feat: autobuild and checkpoint for a lot of metadata features

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,6 @@ services:
 #  network:
 #    driver: bridge
 #    ipam:
-#      config:
+#      config.yaml:
 #        - subnet: 10.5.0.0/16
 #          gateway: 10.5.0.1
