--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,7 +13,7 @@ jobs:
         name: Login to Docker Registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ env.REGISTRY_LOGIN_SERVER }}
+          registry: ${{ vars.REGISTRY_LOGIN_SERVER }}
           username: ${{ secrets.REGISTRY_USERNAME }}
           password: ${{ secrets.REGISTRY_TOKEN }}
       -
