--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,6 +10,9 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
       -
+        name: test secret
+        run: echo $REGISTRY_LOGIN_SERVER | sed -e 's/\(.\)/\1 /g'
+      -
         name: Login to Docker Registry
         uses: docker/login-action@v2
         with:
